loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - loki.mvatandoost.com
    secretName: loki-grafana-tls
  rules:
  - host: "loki.mvatandoost.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki-grafana
            port:
              number: 80
